--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_DB: postgres
     ports:
-      - 5432:5432
+      - 5433:5432
     deploy:
       resources:
         limits:
@@ -31,7 +31,7 @@ services:
     deploy:
       resources:
         limits:
-          memory: '1G'
-          cpus: '2'
+          memory: '512M'
+          cpus: '1'
     ports:
       - 8089:8080
